<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="alarm_alread_exist">Scheduled power on/off <xliff:g id="time">%s</xliff:g> has already exist, please set another time </string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in DeskClock.</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="app_allow">Allow</string>
    <string name="app_as_lunch">App secondary launch</string>
    <string name="app_as_lunch_optimization">App secondary launch</string>
    <string name="app_auto">App auto</string>
    <string name="app_auto_run_management">Auto launch management</string>
    <string name="app_auto_run_optimization">App auto launch</string>
    <string name="app_battery_saver_manager">App standby optimizer</string>
    <string name="app_battery_saving_setting">App battery settings</string>
    <string name="app_list">App list</string>
    <string name="app_not_allow">Don\'t allow</string>
    <string name="app_optimized">App optimized</string>
    <string name="app_optimized_summaryOff">Close app optimized</string>
    <string name="app_optimized_summaryOn">Enable app optimized</string>
    <string name="app_standby_network_data">Standby network data</string>
    <string name="app_standby_sleep_optimizaiton">Standby sleep optimization</string>
    <string name="app_standby_wakeup_optimizaiton">Standby wakeup optimization</string>
    <string name="assistant_app_category_title">App</string>
    <string name="assistant_shortcut_back_title">Back</string>
    <string name="assistant_shortcut_category_title">Shortcut</string>
    <string name="assistant_shortcut_home_title">Home</string>
    <string name="assistant_shortcut_menu_title">Menu</string>
    <string name="assistant_shortcut_none_title">None</string>
    <string name="assistant_shortcut_search_title">Search</string>
    <string name="assistant_title">Assistant</string>
    <string name="auto_launch_title">Don\'t allow the app auto-launch, it will help save power and memory.</string>
    <string name="auto_low_power">Low power saver</string>
    <string name="auto_run_setting">Auto launch Setting</string>
    <string name="automatic_contrast">Automatic contrast</string>
    <string name="automatic_contrast_summary">Optimize contrast for available light</string>
    <string name="battery_saver_manager">Battery manager</string>
    <string name="battery_saver_optimization">Power saving optimization</string>
    <string name="battery_saving_setting">Battery saving settings</string>
    <string name="charge_exit_low_power_mode">Exiting power saving mode when charging</string>
    <string name="charging_out_low_power">Exit low power mode when charging</string>
    <string name="choice_dialog_title">Please choose the path of Update Package.</string>
    <string name="choose_battery_saver">Choose battery saver</string>
    <string name="choose_navigation_bar_style">Please select a combination of navigation buttons</string>
    <string name="close">Close</string>
    <string name="close_all_app">All</string>
    <string name="close_app_title">Closing background apps after your screen is locked helps save power. However, you may not receive new messages from email, messaging, and social networking apps after they are closed.\n\nApps selected here will be closed after your screen is locked.</string>
    <string name="color_cool">Cool</string>
    <string name="color_standard">Standard</string>
    <string name="color_temperature_disabled_toast">Can not adjust color temperature in eye comfort mode</string>
    <string name="color_title">Color</string>
    <string name="color_warm">Warm</string>
    <string name="colors_contrast_title">Colors &amp; contrast</string>
    <string name="contrast_title">Contrast</string>
    <string name="current_label_phone">Tablet</string>
    <string name="customize_power_saving_mode">Customeize saver mode</string>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="dialog_restore_default_apn">All the APN you add will be removed,and the remaining APN will be reseted to the default settings.Are you sure to continue?</string>
    <string name="do_not_close">Don\'t close</string>
    <string name="double_tap_volumeup_for_camera_summary">To quickly open camera, press the volume up button twice. Works when the screen is off.</string>
    <string name="easy_answer">Easy answer</string>
    <string name="easy_answer_summary">Pick up the device and close to your ear to answer incoming calls</string>
    <string name="easy_bell">Easy bell</string>
    <string name="easy_bell_summary">Pick up the device when it is ringing, ring will weaken and device will vibrate</string>
    <string name="easy_clear_memory">Easy clear memory</string>
    <string name="easy_clear_memory_summary">Shake the device twice continuously when not lock screen, you can clean up memory</string>
    <string name="easy_dial">Easy dial</string>
    <string name="easy_dial_summary">Pick up device to call the contact on screen</string>
    <string name="easy_start">Easy start</string>
    <string name="easy_start_summary">Double-click the device rear cover to start camera</string>
    <string name="every_day">Every day</string>
    <string name="factory_dialog_title">"Prompt"</string>
    <string name="handsfree_switch">Handsfree switch</string>
    <string name="handsfree_switch_summary">Pick up device to your ear when you are talking hands-free, switch to handset mode</string>
    <string name="hardware_power_usage">Hardware</string>
    <string name="hide_navigation_bar_title">Navigation bar</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="increased_contrast">Increased contrast</string>
    <string name="increased_contrast_summary">Increased display contrast</string>
    <string name="lock_music_switch">Lock music switch</string>
    <string name="lock_music_switch_summary">Music is playing when it is lock screen, shake the device to switch music</string>
    <string name="lock_screen_battery_save">Close app after screen lock</string>
    <string name="low_power_battery_saver">Save power when low battery</string>
    <string name="low_power_mode">Power saving mode</string>
    <string name="low_power_mode_summary">Limit the power consumption, recommend low power use</string>
    <string name="low_power_mode_switch">Switch battery mode when low power</string>
    <string name="master_clear_level" >"The battery level is less than 30%. Do you want to continue the tablet reset operation?"</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="more_title">More</string>
    <string name="music_switch">Music switch</string>
    <string name="music_switch_summary">When music is playing, shake the device to switch music</string>
    <string name="mute_alarms">Mute alarms</string>
    <string name="mute_alarms_summary">Flip the device to mute alarms</string>
    <string name="mute_incoming_calls">Mute incoming calls</string>
    <string name="mute_incoming_calls_summary">Flip the device to mute incoming calls</string>
    <string name="navibar_settings">"Navigation bar settings"</string>
    <string name="navigation_bar_title">Navigation bar</string>
    <string name="never">Never</string>
    <string name="not_allow_all_app">All</string>
    <string name="performence_mode">Performance mode</string>
    <string name="performence_mode_summary">Adjust the GPU and network mildly, recommend when game and video</string>
    <string name="phone_ram">RAM</string>
    <string name="play_control">Play control</string>
    <string name="play_control_summary">When music or video is playing, flip device to pause, flip again to resume</string>
    <string name="pocket_mode">Pocket mode</string>
    <string name="pocket_mode_summary">Smart control when device in pocket</string>
    <string name="power_consumer_type_GPS">"Use GPS for a long time"</string>
    <string name="power_consumer_type_alarm">"Frequently wake up system"</string>
    <string name="power_consumer_type_wakelock">"Stop the dormancy of the system for a long time"</string>
    <string name="power_intensive">Power-\nintensive</string>
    <string name="power_intensive_apps">Power intensive apps</string>
    <string name="power_intensive_land">Power-intensive</string>
    <string name="power_intensive_title">The application marked as power-intensive is only expressed as more frequent activity in standby.</string>
    <string name="power_off">"Power off"</string>
    <string name="power_on">"Power on"</string>
    <string name="power_saving">Power saving</string>
    <string name="power_saving_mode">Power saving mode</string>
    <string name="power_saving_mode_summary">Power saving priority, recommend need more longer standby time to use</string>
    <string name="power_saving_summary">Turn off wifi search automatically to save power</string>
    <string name="power_usage_list_summary_all">Battery usage since full charge (<xliff:g id="time">^1</xliff:g> ago)</string>
    <string name="power_usage_list_summary_title">Battery usage since full charge</string>
    <string name="power_usage_ranking">Consumption level</string>
    <string name="pull_down_notification_bar">:Open notification panel</string>
    <string name="quick_browse">Quick browse</string>
    <string name="quick_browse_summary">Shake the device to switch previous or next email</string>
    <string name="recovery_no_package" >No update package file on SD card</string>
    <string name="recovery_no_update_package" >No update package file in SD card or in the internal storage </string>
    <string name="recovery_sdacrd_status" >No SD card</string>
    <string name="recovery_update_level" >Capacity of less than 35% can not start the upgrade operation, please recharge</string>
    <string name="schedule_mode">Schedule power saving</string>
    <string name="set_low_power_value">Set value of low power</string>
    <string name="smart_controls">Smart controls</string>
    <string name="smart_motion">Smart motion</string>
    <string name="smart_motion_summary">Pick up, flip or shake device to control relevant applications</string>
    <string name="smart_power_saving_mode">Smart saving mode</string>
    <string name="smart_power_saving_mode_summary">Keep data, call and messages, recommend daily use</string>
    <string name="smart_wake">Smart wake</string>
    <string name="smart_wake_summary">Pick up the device and double-click anywhere on the screen to wake it</string>
    <string name="standard">Standard</string>
    <string name="standard_summary">Contrast will remain constant</string>
    <string name="super_power_saving_mode">Ultra saving mode</string>
    <string name="super_power_saving_mode_summary">Keep call and messages, recommend low power use</string>
    <string name="super_resolution_settings">"Screen resolution"</string>
    <string name="super_resolution_settings_summary">"Adjusting screen resolution helps save power, but some applications may be turned off"</string>
    <string name="swtichmachine">"Scheduled power on/off"</string>
    <string name="time_power_off">Power off time</string>
    <string name="time_power_on">Power on time</string>
    <string name="time_repeat">Repeat</string>
</resources>