<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/color_contrast"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/color_title"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:background="@color/summary_color"/>

        <RelativeLayout
            android:id="@+id/color_ajust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <TextView
                android:id="@+id/color_warm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingStart="24dp"
                android:textColor="@color/color_temperature_color"
                android:text="@string/color_warm" />

            <TextView
                android:id="@+id/color_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/color_standard"
                android:textColor="@color/color_temperature_color"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/color_cool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="24dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/color_temperature_color"
                android:text="@string/color_cool"/>

            <com.android.settings.display.SprdLabeledSeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/color_normal"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                style="@android:style/Widget.Material.SeekBar.Discrete"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/contrast_title"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12dp"
            android:background="@color/summary_color"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/automatic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/automatic_contrast"
                android:paddingStart="12dp"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="54dp"
                android:text="@string/automatic_contrast_summary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="12dp"
                android:background="@color/summary_color"/>

            <RadioButton
                android:id="@+id/increased_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/increased_contrast"
                android:paddingStart="12dp"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="54dp"
                android:text="@string/increased_contrast_summary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="12dp"
                android:background="@color/summary_color"/>

            <RadioButton
                android:id="@+id/standard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/standard"
                android:paddingStart="12dp"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="54dp"
                android:text="@string/standard_summary"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>